testdata/language-features/basic-values/if03.reject.lc
value1 = if () then () else ()

